--- a/app/main/views/contact.template.html
+++ b/app/main/views/contact.template.html
@@ -13,7 +13,7 @@
             <td>
               <i class="material-icons">store</i>
             </td>
-            <td>Adres</td>
+            <td>{{ 'ADDRESS' | translate }}</td>
             <td>ul. Wallenroda 10
               <br>Aleksandrow Łodzki 95-070
             </td>
