--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -2,10 +2,10 @@
     <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around none" layout-padding
         flex="100">
         <md-card ng-repeat="sock in socks">
-            <img ng-src="{{sock.image}}" width="340" height="600" class="md-card-image" alt="{{sock.name}}">
+            <img ng-src="{{sock.image}}" width="340" height="600" class="md-card-image" alt="{{sock.name | translate}}">
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-headline">{{sock.name}}</span>
+                    <span class="md-headline">{{sock.name | translate}}</span>
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
