--- a/app/main/views/menu.template.html
+++ b/app/main/views/menu.template.html
@@ -3,7 +3,7 @@
     <span flex-order="1" flex-order-gt-sm="-1">Mik Skarpety</span>
 
     <div flex-order="0">
-      
+
       <md-button ng-click="toggleLeftMenu()" class="md-icon-button" aria-label="Menu" hide-gt-sm>
         <md-icon md-font-set="material-icons"> menu </md-icon>
       </md-button>
@@ -18,6 +18,9 @@
       </md-button>
       <md-button ui-sref="contact" hide show-gt-sm>
         Kontakt
+      </md-button>
+      <md-button ng-click="changeLanguage()">
+        Change language
       </md-button>
     </div>
   </div>
