Language support extended

--- a/app/main/views/contact.template.html
+++ b/app/main/views/contact.template.html
@@ -4,7 +4,7 @@
       <table class="highlight">
         <thead>
           <tr>
-            <th colspan="3">Kontakt</th>
+            <th colspan="3">{{ 'Contact' | translate }}</th>
           </tr>
         </thead>
 
@@ -13,7 +13,7 @@
             <td>
               <i class="material-icons">store</i>
             </td>
-            <td>{{ 'ADDRESS' | translate }}</td>
+            <td>{{ 'Address' | translate }}</td>
             <td>ul. Wallenroda 10
               <br>Aleksandrow Łodzki 95-070
             </td>
@@ -22,7 +22,7 @@
             <td>
               <i class="material-icons">phone</i>
             </td>
-            <td>Telefon</td>
+            <td>{{ 'Phone number' | translate }}</td>
             <td>605-585-944</td>
           </tr>
           <tr>
