--- a/app/main/views/home.template.html
+++ b/app/main/views/home.template.html
@@ -5,10 +5,10 @@
     </div>
     <div layout="column">
       <p class="home-title" hide show-gt-sm>
-        {{ 'SOCK_FROM_A_TO_Z' | translate }}
+        {{ 'Sock from A to Z' | translate }}
       </p>
       <md-button class="md-accent md-raised" ui-sref="offer">
-        {{ 'SEE_NEWEST_OFFER' | translate }}
+        {{ 'See newest offer' | translate }}
       </md-button>
     </div>
   </div>
@@ -16,19 +16,19 @@
   <div layout="column" layout-gt-sm="row">
     <md-card class="orange-card">
       <md-card-content>
-        <h2>{{ 'JOIN_HAPPY_CUSTEMERS' | translate }}</h2>
+        <h2>{{ 'Join the group of satisfied customers' | translate }}</h2>
       </md-card-content>
       <md-card-actions layout="row" layout-align="end center">
-        <md-button ui-sref="contact">{{ 'CONTACT' | translate }}</md-button>
+        <md-button ui-sref="contact">{{ 'Contact' | translate }}</md-button>
       </md-card-actions>
     </md-card>
     <md-card class="cyan-card">
       <md-card-content>
-        <h2>{{ 'FROM_YEAR_1989' | translate }}!</h2>
-        <p>{{ 'COMPANY_DZIEWIARSTWO_MASZYNOWE_MIECZYSLAW_KLIMCZAK_EXIST_FROM_1989' | translate }}.</p>
+        <h2>{{ 'exists since 1989' | translate }}!</h2>
+        <p>{{ 'Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.' | translate }}</p>
       </md-card-content>
       <md-card-actions layout="row" layout-align="end center">
-        <md-button ui-sref="about">{{ 'LEARN_MORE' | translate }}</md-button>
+        <md-button ui-sref="about">{{ 'Learn more' | translate }}</md-button>
       </md-card-actions>
     </md-card>
   </div>
