--- a/app/main/views/menu.template.html
+++ b/app/main/views/menu.template.html
@@ -8,19 +8,19 @@
         <md-icon md-font-set="material-icons"> menu </md-icon>
       </md-button>
       <md-button ui-sref="home" hide show-gt-sm>
-        Strona główna
+        {{ 'Main Page' | translate }}
       </md-button>
       <md-button ui-sref="offer" hide show-gt-sm>
-        Oferta
+        {{ 'Offer' | translate }}
       </md-button>
       <md-button ui-sref="about" hide show-gt-sm>
-        O firmie
+        {{ 'About company' | translate }}
       </md-button>
       <md-button ui-sref="contact" hide show-gt-sm>
-        Kontakt
+        {{ 'Contact' | translate }}
       </md-button>
       <md-button ng-click="changeLanguage()">
-        Change language
+        {{ 'Change language' | translate }}
       </md-button>
     </div>
   </div>
