--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -2,19 +2,29 @@
     <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around none" layout-padding
         flex="100">
         <md-card ng-repeat="sock in socks">
+            <md-card-header>
+                <md-card-header-text>
+                    <span class="md-headline">{{ sock.name | translate }}</span>
+                </md-card-header-text>
+            </md-card-header>
             <img ng-src="{{sock.image}}" width="340" height="600" class="md-card-image" alt="{{sock.name | translate}}">
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-headline">{{sock.name | translate}}</span>
+                    <md-chips ng-model="sock.categories" readonly="true">
+                        <md-chip-template>
+                            <strong>{{$chip | translate}}</strong>
+                            <!--<em>(fruit)</em>-->
+                        </md-chip-template>
+                    </md-chips>
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
                 <p ng-repeat="desc in sock.descriptions">
-                    {{desc}}
+                    {{ desc | translate }}
                 </p>
             </md-card-content>
             <md-card-footer>
-                Ilość w paczce: <b>{{sock.amount}} par<b>
+                {{ 'Amount in package' | translate }}: <b>{{sock.amount}} par<b>
             </md-card-footer>
         </md-card>
     </div>
