--- a/styles/main.css
+++ b/styles/main.css
@@ -148,3 +148,14 @@ td, th {
     border-right: 1px solid #d0d0d0;
   }
 }
+
+.mik-footer-bar {
+  font-size: 13px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-top: 1px solid #e5e5e5;
+  overflow: hidden;
+  z-index: 2;
+  background-color: #fff;
+}
