Details view added.

--- a/styles/main.css
+++ b/styles/main.css
@@ -149,6 +149,33 @@ td, th {
   }
 }
 
+.black-box {
+  margin: 3px;
+  border-radius: 10px;
+  border: 3px solid #B0BEC5;
+  background: #000;
+  width: 20px;
+  height: 20px;
+}
+
+.blue-gray-box {
+  margin: 3px;
+  border-radius: 10px;
+  border: 3px solid #B0BEC5;
+  background: #455A64;
+  width: 20px;
+  height: 20px;
+}
+
+.empty-box {
+  text-align: center;
+  margin: 3px;
+  border-radius: 10px;
+  border: 3px solid #B0BEC5;
+  width: 20px;
+  height: 20px;
+}
+
 .mik-footer-bar {
   font-size: 13px;
   position: absolute;
