--- a/app/offer/views/offer-details.template.html
+++ b/app/offer/views/offer-details.template.html
@@ -11,7 +11,7 @@
                     <md-checkbox></md-checkbox>
                     <div class="md-list-item-text">
                         <!--<h3>Title</h3>-->
-                        <p>{{description}}</p>
+                        <p>{{description | translate}}</p>
                     </div>
                 </md-list-item>
             </md-list>
