--- a/app/main/views/home.template.html
+++ b/app/main/views/home.template.html
@@ -1,16 +1,39 @@
 <div layout="column" flex-offset-gt-sm="20" flex-gt-sm="60">
-  <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around none" layout-wrap layout-padding>
-    <div>
-      <img src="images/mik.jpg" alt="{{ 'MIK_SOCK' | translate }}">
+  <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around none" layout-padding>
+
+    <div layout="column" layout-align="center center">
+      <img src="images/mik.jpg" alt="{{ 'MIK_SOCK' | translate }}" width="150px" height="150px">
+      <div layout="column">
+        <p class="home-title" hide show-gt-sm>
+          {{ 'Sock from A to Z' | translate }}
+        </p>
+        <md-button class="md-accent md-raised" ui-sref="offer">
+          {{ 'See newest offer' | translate }}
+        </md-button>
+      </div>
     </div>
-    <div layout="column">
-      <p class="home-title" hide show-gt-sm>
-        {{ 'Sock from A to Z' | translate }}
-      </p>
-      <md-button class="md-accent md-raised" ui-sref="offer">
-        {{ 'See newest offer' | translate }}
-      </md-button>
-    </div>
+    <md-card ng-click="goToDetails(sock)">
+      <md-card-header>
+        <md-card-header-text>
+          <span class="md-headline">Skarpety męskie</span>
+        </md-card-header-text>
+      </md-card-header>
+      <img src="/images/socks/men.jpg" class="md-card-image" alt="{{sock.name | translate}}">
+      <md-card-actions layout="row" layout-align="end center">
+        <md-button>Oferta Męska</md-button>
+      </md-card-actions>
+    </md-card>
+    <md-card ng-click="goToDetails(sock)">
+      <md-card-header>
+        <md-card-header-text>
+          <span class="md-headline">Skarpety męskie</span>
+        </md-card-header-text>
+      </md-card-header>
+      <img src="/images/socks/men.jpg" class="md-card-image" alt="{{sock.name | translate}}">
+      <md-card-actions layout="row" layout-align="end center">
+        <md-button>Oferta Męska</md-button>
+      </md-card-actions>
+    </md-card>
   </div>
   <md-divider></md-divider>
   <div layout="column" layout-gt-sm="row">
