--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -1,10 +1,15 @@
 <div layout="row" flex-offset-gt-sm="10" flex-gt-sm="80">
     <div layout="column">
-        <div layout="row">
-            <p>Kategorie</p>
+        <div layout="row" layout-align="start center" layout-margin>
+            <div>
+                <p>Kategorie</p>
+            </div>
+            <md-checkbox ng-model="category.value" aria-label="{{ category.name | translate }}" ng-repeat="category in categories">
+                {{ category.name | translate }}
+            </md-checkbox>
         </div>
         <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around start" layout-wrap>
-            <div flex-gt-sm="25" ng-repeat="sock in socks">
+            <div flex-gt-sm="20" ng-repeat="sock in socks | categoryFilter:categories">
                 <md-card ng-click="goToDetails(sock)">
                     <md-card-header>
                         <md-card-header-text>
@@ -21,11 +26,6 @@
                             </md-chips>
                         </md-card-title-text>
                     </md-card-title>
-                    <!--<md-card-content>
-                        <p ng-repeat="desc in sock.descriptions">
-                            {{ desc | translate }}
-                        </p>
-                    </md-card-content>-->
                     <md-card-actions layout="row" layout-align="end center">
                         <md-button>Zobacz więcej</md-button>
                     </md-card-actions>
