Colors added, templates improved

--- a/app/offer/views/offer-details.template.html
+++ b/app/offer/views/offer-details.template.html
@@ -18,7 +18,7 @@
             <div class="mik-sizes" layout="column">
                 <p>Rozmiary</p>
                 <div layout="column">
-                    <div>{{size}}</div ng-repeat="size in sock.sizes">
+                    <div ng-repeat="size in sock.sizes">{{size}}</div>
                 </div>
             </div>
             <div class="mik-colors" layout="column">
