--- a/app/main/views/menu.template.html
+++ b/app/main/views/menu.template.html
@@ -7,21 +7,21 @@
       <md-button ng-click="toggleLeftMenu()" class="md-icon-button" aria-label="Menu" hide-gt-sm>
         <md-icon md-font-set="material-icons"> menu </md-icon>
       </md-button>
-      <md-button ui-sref="home" hide show-gt-sm>
+      <md-button ui-sref="home" hide show-gt-sm class="menu-item">
         {{ 'Main Page' | translate }}
       </md-button>
-      <md-button ui-sref="offer" hide show-gt-sm>
+      <md-button ui-sref="offer" hide show-gt-sm class="menu-item">
         {{ 'Offer' | translate }}
       </md-button>
-      <md-button ui-sref="about" hide show-gt-sm>
+      <md-button ui-sref="about" hide show-gt-sm class="menu-item">
         {{ 'About company' | translate }}
       </md-button>
-      <md-button ui-sref="contact" hide show-gt-sm>
+      <md-button ui-sref="contact" hide show-gt-sm class="menu-item">
         {{ 'Contact' | translate }}
       </md-button>
-      <md-button ng-click="changeLanguage()">
+      <!--<md-button ng-click="changeLanguage()">
         {{ 'Change language' | translate }}
-      </md-button>
+      </md-button>-->
     </div>
   </div>
 </div>
