--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -1,21 +1,16 @@
 <div layout="row" flex-offset-gt-sm="10" flex-gt-sm="80">
     <div layout="column">
-        <div layout="row" layout-align="start center" layout-margin>
+        <div layout="row" layout-align="start center" layout-margin layout-wrap>
             <div>
-                <p>Kategorie</p>
+                <p>Kategorie:</p>
             </div>
             <md-checkbox ng-model="category.value" aria-label="{{ category.name | translate }}" ng-repeat="category in categories">
                 {{ category.name | translate }}
             </md-checkbox>
         </div>
-        <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around start" layout-wrap>
-            <div flex-gt-sm="20" ng-repeat="sock in socks | categoryFilter:categories">
+        <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="start start" layout-wrap>
+            <div flex="100" flex-gt-sm="25" ng-repeat="sock in socks | categoryFilter:categories">
                 <md-card ng-click="goToDetails(sock)">
-                    <md-card-header>
-                        <md-card-header-text>
-                            <span class="md-headline">{{ sock.name | translate }}</span>
-                        </md-card-header-text>
-                    </md-card-header>
                     <img ng-src="{{sock.image}}" class="md-card-image" alt="{{sock.name | translate}}">
                     <md-card-title>
                         <md-card-title-text>
