--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -11,7 +11,7 @@
         <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="start start" layout-wrap>
             <div flex="100" flex-gt-sm="25" ng-repeat="sock in socks | categoryFilter:categories">
                 <md-card ng-click="goToDetails(sock)">
-                    <img ng-src="{{sock.image}}" class="md-card-image" alt="{{sock.name | translate}}">
+                    <img ng-src="/images/socks/{{sock.id}}.jpg" class="md-card-image" alt="{{sock.name | translate}}">
                     <md-card-title>
                         <md-card-title-text>
                             <md-chips ng-model="sock.categories" readonly="true">
