Translation of colors added

--- a/app/offer/views/offer-details.template.html
+++ b/app/offer/views/offer-details.template.html
@@ -26,7 +26,7 @@
                 <div layout="row">
                     <div class="{{className}}" ng-repeat="(colorName, className) in sock.colors">
                         <md-tooltip>
-                        {{colorName}}
+                        {{colorName | translate}}
                         </md-tooltip>
                     </div>
                     <div class="empty-box">
