Style of menu improved

--- a/app/main/views/menu.template.html
+++ b/app/main/views/menu.template.html
@@ -1,6 +1,6 @@
 <div class="md-toolbar-tools">
   <div flex-offset-gt-sm="10" flex-gt-sm="80" layout="row-reverse" layout-gt-sm="row" layout-align="space-between center">
-    <span flex-order="1" flex-order-gt-sm="-1">Mik Skarpety</span>
+    <span flex-order="1" flex-order-gt-sm="-1" class="menu-title">Mik Skarpety</span>
 
     <div flex-order="0">
 
