--- a/app/offer/views/offer.template.html
+++ b/app/offer/views/offer.template.html
@@ -10,7 +10,7 @@
         </div>
         <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="start start" layout-wrap>
             <div flex="100" flex-gt-sm="25" ng-repeat="sock in socks | categoryFilter:categories">
-                <md-card ng-click="goToDetails(sock)">
+                <md-card ui-sref="details({offerId: sock.id})">
                     <img ng-src="/images/socks/{{sock.id}}.jpg" class="md-card-image" alt="{{sock.name | translate}}">
                     <md-card-title>
                         <md-card-title-text>
@@ -29,3 +29,15 @@
         </div>
     </div>
 </div>
+<md-dialog aria-label="List dialog">
+  <md-dialog-content>
+    <md-list>
+      <md-list-item ng-repeat="item in items">
+        <p>Number {{item}}</p>
+      </md-list-item>
+    </md-list>
+  </md-dialog-content>
+  <md-dialog-actions>
+    <md-button ng-click="closeDialog()" class="md-primary">Close Dialog</md-button>
+  </md-dialog-actions>
+</md-dialog>
