Home page changed

--- a/app/main/views/home.template.html
+++ b/app/main/views/home.template.html
@@ -12,14 +12,37 @@
         </md-button>
       </div>
     </div>
-    <div flex="30">
-      <md-card>
-        <img src="/images/socks/men.jpg" class="md-card-image" alt="{{'Skarpety męskie' | translate}}" width="200px" height="298px">
-
-    </div>
-    <div flex="30">
-      <md-card>
-        <img src="/images/socks/women.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+    <div flex="30" layout="row" layout-wrap>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/m06.jpg" class="md-card-image" alt="{{'Skarpety męskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/m02.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/f01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/w01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/m05.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
+      <div flex="33">
+        <md-card>
+          <img src="/images/socks/k04.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+        </md-card>
+      </div>
     </div>
   </div>
   <md-divider></md-divider>
