Fix for home page logo and offer.

--- a/app/main/views/home.template.html
+++ b/app/main/views/home.template.html
@@ -1,7 +1,7 @@
 <div layout="column" flex-offset-gt-sm="20" flex-gt-sm="60">
   <div layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="space-around none" layout-padding>
 
-    <div layout="column" layout-align="center center" flex="65">
+    <div layout="column" layout-align="center center" flex-gt-sm="40">
       <img src="images/mik.jpg" alt="{{ 'MIK_SOCK' | translate }}" width="150px" height="150px">
       <div layout="column">
         <p class="home-title" hide show-gt-sm>
@@ -12,42 +12,42 @@
         </md-button>
       </div>
     </div>
-    <div flex="30" layout="row" layout-wrap>
+    <div flex-gt-sm="60" layout="row" layout-align="start start" layout-wrap>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/m06.jpg" class="md-card-image" alt="{{'Skarpety męskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/m06.jpg" class="md-card-image" alt="{{'Skarpety męskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/m02.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/m02.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/f01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/f01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/w01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/w01.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/m05.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/m05.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
       <div flex="33">
         <md-card>
-          <img src="/images/socks/k04.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
+          <img src="/images/home/k04.jpg" class="md-card-image" alt="{{'Skarpety damskie' | translate}}" width="200px" height="298px">
         </md-card>
       </div>
     </div>
   </div>
   <md-divider></md-divider>
   <div layout="column" layout-gt-sm="row">
-    <md-card class="orange-card">
+    <md-card class="orange-card" flex="50">
       <md-card-content>
         <h2>{{ 'Join the group of satisfied customers' | translate }}</h2>
       </md-card-content>
@@ -55,7 +55,7 @@
         <md-button ui-sref="contact">{{ 'Contact' | translate }}</md-button>
       </md-card-actions>
     </md-card>
-    <md-card class="cyan-card">
+    <md-card class="cyan-card" flex="50">
       <md-card-content>
         <h2>{{ 'exists since 1989' | translate }}!</h2>
         <p>{{ 'Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.' | translate }}</p>
