--- a/app/main/views/about.template.html
+++ b/app/main/views/about.template.html
@@ -5,17 +5,13 @@
             <h3>Dziewiarstwo Maszynowe Mieczysław Klimczak</h3>
             <p class="flow-text">
 
-                istnieje na rynku od 1989 roku.
+                {{'exists on the market since 1989.' | translate}}
                 <br>
-                <br> Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości
-                przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment
-                wzorów i kolorów oraz możliwość wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.
+                <br> {{'Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.' | translate}}
                 <br>
-                <br> Korzystamy z nowoczesnych maszyn dziewiarskich produkcji włoskiej, co pozwala nam sprostać współczesnym
-                trendom mody oraz zrealizować każde zamówienie.
+                <br> {{'We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.' | translate}}
                 <br>
-                <br> Oprócz stałej oferty zaprezentowanej poniżej realizujemy również zamówienia specjalne zgodne z indywidualnymi
-                potrzebami klienta. Ilość takiego zamówienia jest za każdym razem uzgadniania z odbiorcą.
+                <br> {{'In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.' | translate}}
                 <br>
             </p>
         </div>
