--- a/app/main/views/about.template.html
+++ b/app/main/views/about.template.html
@@ -9,7 +9,7 @@
                 <br>
                 <br> {{'Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.' | translate}}
                 <br>
-                <br> {{'We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.' | translate}}
+                <br> {{'We use modern Italian manufacturing machinery, which allows us to meet today\'s fashion trends and realize every order.' | translate}}
                 <br>
                 <br> {{'In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.' | translate}}
                 <br>
