Responsive design fix.

--- a/app/main/views/menu.template.html
+++ b/app/main/views/menu.template.html
@@ -20,7 +20,7 @@
         {{ 'Contact' | translate }}
       </md-button>
       <md-menu>
-        <md-button ng-click="$mdOpenMenu($event)" aria-label="Choose language">
+        <md-button ng-click="$mdOpenMenu($event)" aria-label="Choose language" class="language-button">
           {{ language | uppercase }}
         </md-button>
         <md-menu-content>
