--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,11 @@ md-content {
 .cyan-card {
   background-color: #00acc1;
 }
+
+.language-button {
+  min-width: initial;
+}
+
 .footer {
   color: white;
   background-color: #ee6e73;
