--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,11 @@ md-content {
   min-width: initial;
 }
 
+.move-arrow {
+  cursor: pointer;
+  font-size: 48px;
+}
+
 .footer {
   color: white;
   background-color: #ee6e73;
